GB3-867: override some amterial css to prevent overflow when only one result present in table

--- a/src/app/map/components/feature-info-overlay/feature-info-content/feature-info-content.component.scss
+++ b/src/app/map/components/feature-info-overlay/feature-info-content/feature-info-content.component.scss
@@ -5,6 +5,14 @@
 :host ::ng-deep .feature-info-content__table__row__column__wrapper {
   .mat-mdc-radio-button .mdc-radio {
     padding: 0;
+
+    .mdc-radio__native-control {
+      width: auto;
+    }
+
+    .mat-mdc-radio-touch-target {
+      width: auto;
+    }
   }
 }
 
